# examtrainer

./: .gitignore  Cargo.toml  README.md  create_question.sh
examples/: README.md  config.toml  question.toml
examples/hello/hello.subject/: subject.en.txt
exams/: Exam1.toml  Exam2.toml
modules/aff_a/aff_a.subject/: subject.en.txt
src/: error.rs  lib.rs  main.rs
src/config/: config.rs  error.rs  exams.rs  frameworks.rs  mod.rs  toml.rs
src/error/: mod.rs
src/exam/: database.rs  error.rs  grades.rs  level.rs  mod.rs  toml.rs
src/output/: help.rs  mod.rs
src/question/: binary_runner.rs  compiler.rs  database.rs  error.rs  mod.rs  question.rs  submission.rs  test.rs  toml.rs  trace.rs
src/shell/: exam.rs  main_menu.rs  mod.rs  single_question.rs
src/test_runner/: error.rs  mod.rs  program_output.rs  submission.rs
src/toml/: exam.rs  mod.rs
src/user/: attempt.rs  mod.rs
src/utils/: mod.rs  program_output.rs  range.rs  time_info.rs
tst/mock_submit/: binary_name
tst/modules/: exam_1.toml  example_binary  module_1.toml
tst/resources/: config_1.toml  invalid_1.toml  invalid_framework_config1.toml  invalid_framework_config2.toml  test_config1.toml  test_config2.toml
tst/resources/exams/: prototype_1.toml
tst/resources/questions/Z_countdown_sources_wrong/: ft_countdown.toml
tst/resources/questions/Z_countdown_timout/: ft_countdown.toml
tst/resources/questions/Z_failed_countdown/: ft_countdown.out  ft_countdown.toml
tst/resources/questions/Z_incorrect_aff_a/: aff_a.toml
tst/resources/questions/Z_incorrect_strlen/: ft_strlen.toml
(+41 files in other folders)
