[package]
name = "examtrainer"
version = "0.1.0"
authors = ["Ryan Lucas <rlucas@student.codam.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
home = "0.5.3"
term_size = "0.3.2"
colored = "2"
chrono = "0.4"
rand = "0.8.3"
